Project/objects/Apttus_Proposal__Proposal_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Full_Gross_Margin__c</fullName>
        <label>Full Gross Margin (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Full_Gross_Result__c</fullName>
        <label>Full Gross Result</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Full_Net_Margin__c</fullName>
        <label>Full Net Margin (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Full_Net_Result__c</fullName>
        <label>Full Net Result</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_GMarginP__c</fullName>
        <description>Field to hold gross margin percentage</description>
        <label>Margin %</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
	<fields>
        <fullName>APTS_External_Configurator_LineItem_ID__c</fullName>
        <label>External Configurator Line Item ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_GMargin__c</fullName>
        <description>Field which holds gross margin for line items</description>
        <label>Margin</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_GTV_Code__c</fullName>
        <description>Hierarchy Level 3 Code of Product</description>
        <formula>Apttus_Proposal__Product__r.APTS_Hierarchy_Level_3_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GTV Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_GTV_Level__c</fullName>
        <formula>Apttus_QPConfig__DerivedFromId__r.APTS_GTV_Level__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GTV Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Global_Product_Code__c</fullName>
        <formula>IF(Apttus_Proposal__Product__r.APTS_LP_Is_Hierarchy__c, &apos;&apos;, Apttus_Proposal__Product__r.APTS_Global_Product_ID__r.APTS_ABB_Global_ID__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Gross_Margin__c</fullName>
        <label>Gross Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Gross_Price_Account_Customer__c</fullName>
        <label>Gross Price Account Customer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Gross_Sales_Price__c</fullName>
        <label>Gross Sales Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Guarantee__c</fullName>
        <label>Guarantee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Harmonization_Code_Tariff_Code__c</fullName>
        <label>Harmonization Code (Tariff Code)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Has_ERP_LN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has ERP_LN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Hedging__c</fullName>
        <label>Hedging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Hierarchy_Code_Description__c</fullName>
        <formula>IF(APTS_Product_Is_Hierarchy__c,
  APTS_Hierarchy_Name__c,
  APTS_new_product_code__c + &quot; - &quot; +APTS_Product_Description__c)</formula>
        <label>Hierarchy Code - Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Hierarchy_Level_3_Code__c</fullName>
        <formula>Apttus_QPConfig__DerivedFromId__r.Apttus_Config2__ProductId__r.APTS_Hierarchy_Level_3_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hierarchy Level 3 Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Hierarchy_Level_3_Code_text__c</fullName>
        <label>Hierarchy Level 3 Code text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Hierarchy_Name__c</fullName>
        <formula>IF(Apttus_Proposal__Product__r.APTS_LP_Is_Hierarchy__c,  Apttus_Proposal__Product__r.Name , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hierarchy Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_High_Effort_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>High Effort Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Import_Duties__c</fullName>
        <label>Import Duties</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Inflation_Rates__c</fullName>
        <label>Inflation Rates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Installation__c</fullName>
        <label>Installation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Insurance__c</fullName>
        <label>Insurance</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation Insurance</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>APTS_Interest__c</fullName>
        <label>Interest</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Is_Alternative__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Alternative</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Item_Order_System_Mapping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Order System Mapping</label>
        <referenceTo>APTS_ABB_ItemOrderSystemMapping__c</referenceTo>
        <relationshipLabel>Proposal Line Items</relationshipLabel>
        <relationshipName>Proposal_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Joint_Consignment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Joint Consignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Junior_Engineer__c</fullName>
        <label>Junior Engineer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Standard_Discount__c</fullName>
        <inlineHelpText>Standard  Discount fetched from SAP.</inlineHelpText>
        <label>Standard Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Standard_Net__c</fullName>
        <inlineHelpText>Standard Net price returned from SAP per product.</inlineHelpText>
        <label>Standard Net</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Total_Standard_Price__c</fullName>
        <label>Total Standard Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Unit_Of_Measure__c</fullName>
        <label>Unit Of Measure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Unit_Of_Price__c</fullName>
        <label>Unit Of Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LSO_Gross_Margin_at_TP__c</fullName>
        <label>LSO Gross Margin (%) at TP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_LSO_Gross_Margin_at_TSPA_Price__c</fullName>
        <label>LSO Gross Margin (%) at TSPA Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_LSO_Gross_Result_at_TP__c</fullName>
        <label>LSO Gross Result at TP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_LSO_Gross_Result_at_TSPA_Price__c</fullName>
        <label>LSO Gross Result at TSPA Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_LSO_Net_Margin_at_TP_Add_Lo__c</fullName>
        <label>LSO Net Margin (%) at TP + Additional Lo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_LSO_Net_Margin_at_TP_Add_Local_Cost__c</fullName>
        <label>LSO Net Margin (%) at TP + Additional Lo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_LSO_Net_Margin_at_TSPA_Price_Add_Co__c</fullName>
        <label>LSO Net Margin(%) at TSPA Price+Add Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_LSO_Net_Result_at_TP_Additional_Loc__c</fullName>
        <label>LSO Net Result at TP + Additional Local</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_LSO_Net_Result_at_TSPA_Price_Add_Co__c</fullName>
        <label>LSO Net Result at TSPA Price+Add. Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_LSU_GM_Gross_Margin_per_Item__c</fullName>
        <label>LSU GM (%) (% Gross Margin per Item)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Lead_Time__c</fullName>
        <label>Lead Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Legacy_Line_Item_ID__c</fullName>
        <label>Legacy Line Item ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Letter_of_Credit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Letter of Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Line_Item_Description__c</fullName>
        <label>Line Item Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Line_Item_Notes__c</fullName>
        <description>Created as part of STS-Release 7A: Quotation Field Alignment</description>
        <label>Line Item Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Line_Number_Custom__c</fullName>
        <defaultValue>0</defaultValue>
        <label>#</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Line_Number__c</fullName>
        <externalId>true</externalId>
        <label>Line Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Link__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id, &quot;View&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Load_Losses__c</fullName>
        <inlineHelpText>kW</inlineHelpText>
        <label>Load Losses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Local_Product_Code__c</fullName>
        <formula>IF(Apttus_Proposal__Product__r.APTS_LP_Is_Hierarchy__c, &apos;&apos;, Apttus_Proposal__Product__r.APTS_Product_ID__c )</formula>
        <label>Local Product ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Local_Product_Hierarchy_Name__c</fullName>
        <label>Local Product Hierarchy Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Local_Tax__c</fullName>
        <label>Local Tax (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Locale__c</fullName>
        <label>Locale</label>
        <picklist>
            <picklistValues>
                <fullName>gl_GL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>es_ES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>it_IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fr_FR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Main_Reason_For_Close__c</fullName>
        <label>Main Reason For Close</label>
        <picklist>
            <controllingField>Apttus_QPConfig__LineStatus__c</controllingField>
            <picklistValues>
                <fullName>ABB only bidder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adherence to Customer&apos;s time schedule/ Delivery Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bidding time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled alternative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled by customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled by customer after bidding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial deviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercially unacceptable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Created in Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Frame Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installed base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrity issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost for missed order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No financing in place</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No installed base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No or bad track record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No permit in place</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other preferred suppliers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part of winning ABB package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Political decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preferred supplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price not competitive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pursued by another ABB entity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resource/availability constraints</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Margin_Calculation__c</fullName>
        <label>Margin Calculation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Margin_Corridor_Value__c</fullName>
        <description>Reporting Field displays the Margin Corridor grouping values</description>
        <formula>IF(
    AND(NOT(ISBLANK(Apttus_QPConfig__NetPrice__c)),
	    NOT(ISBLANK(APTS_P_Low_Value__c)),
		NOT(ISBLANK(APTS_P_Avg_Value__c)),
		NOT(ISBLANK(APTS_P_High_Value__c))
	),
	IF(Apttus_QPConfig__NetPrice__c &lt; APTS_P_Low_Value__c,&apos;Below Walk-away&apos;,
	   IF(Apttus_QPConfig__NetPrice__c &lt;= APTS_P_Avg_Value__c,&apos;Between Target &amp; Walk-away&apos;,
	      IF(Apttus_QPConfig__NetPrice__c &lt;= APTS_P_High_Value__c, &apos;Between Start &amp; Target&apos;,&apos;Above Start&apos;)
		  )
	  ),
    &apos;Not Applicable&apos;
  )</formula>
        <label>Margin Corridor Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Margin_Level__c</fullName>
        <label>Margin Level</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Market_Price__c</fullName>
        <inlineHelpText>Standard Net price returned from SAP per product.</inlineHelpText>
        <label>Market Price</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Material_Cost__c</fullName>
        <label>Material Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Maximum_Extra_Discount_Allowed__c</fullName>
        <label>Maximum Extra Discount Allowed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Min_Delivery_Qty__c</fullName>
        <label>Quantity of Package</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Min_Order_Qty__c</fullName>
        <label>Min Order Qty</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Min_Total_Discount_Whls__c</fullName>
        <label>Min. Total Discount Whls. (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Minimum_Floor_Price__c</fullName>
        <label>Minimum / Floor Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Minimum_Order_Amount__c</fullName>
        <label>Minimum Order Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Minimum_Transfer_Price__c</fullName>
        <label>Minimum Transfer Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Mode_of_Transportation__c</fullName>
        <label>Mode of Transportation</label>
        <picklist>
            <picklistValues>
                <fullName>Air</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Truck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_NetUnitPrice_EUR__c</fullName>
        <formula>IF( 
Apttus_QPConfig__NetUnitPrice__c &gt;= 1000000, 
TEXT(FLOOR(Apttus_QPConfig__NetUnitPrice__c / 1000000)) &amp; &quot;.&quot;, 
&quot;&quot;) &amp; 
IF( 
Apttus_QPConfig__NetUnitPrice__c &gt;= 1000, 
RIGHT(TEXT(FLOOR(Apttus_QPConfig__NetUnitPrice__c / 1000)), 3) &amp; &quot;.&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(Apttus_QPConfig__NetUnitPrice__c)), 3) &amp; &quot;,&quot; &amp; 
IF( 
MOD(Apttus_QPConfig__NetUnitPrice__c , 1) * 100 &lt; 10, 
&quot;0&quot; &amp; TEXT(ROUND(MOD(Apttus_QPConfig__NetUnitPrice__c , 1), 2) * 100), 
TEXT(MIN(ROUND(MOD(Apttus_QPConfig__NetUnitPrice__c , 1), 2) * 100, 99)) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Unit Price EUR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Net_Adjustment_Percentage_EUR__c</fullName>
        <formula>IF(APTS_Net_Adjustment_Percentage__c&lt;0.1,
      LEFT(SUBSTITUTE(TEXT(APTS_Net_Adjustment_Percentage__c*100),&quot;.&quot;,&quot;0,&quot;),4),
      IF(APTS_Net_Adjustment_Percentage__c&gt;1,
        LEFT(SUBSTITUTE(TEXT(APTS_Net_Adjustment_Percentage__c*100),&quot;.&quot;,&quot;,&quot;),6),
        LEFT(SUBSTITUTE(TEXT(APTS_Net_Adjustment_Percentage__c*100),&quot;.&quot;,&quot;,&quot;),5)
      ))&amp;IF((APTS_Net_Adjustment_Percentage__c*100-FLOOR(APTS_Net_Adjustment_Percentage__c*100))&lt;&gt;0,&quot;&quot;,&quot;,00&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Adj. (%) EUR</label>
        <type>Text</type>
    </fields>
   <fields>
        <fullName>APTS_Net_Adjustment_Percentage__c</fullName>
        <formula>CASE(APTS_Discount_Type__c , &apos;Substitute Discount&apos;,
        APTS_Discount_Percentage__c ,
        &apos;Additional Discount&apos;,-(((0-APTS_Discount_Percentage__c)  *  (0-APTS_LP_Standard_Discount__c)) - APTS_Discount_Percentage__c - APTS_LP_Standard_Discount__c) , 
          &apos;Net Price&apos;,Apttus_QPConfig__NetAdjustmentPercent__c * -1,NULL
)</formula>
        <label>Net Adj. (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Net_Adjustment__c</fullName>
        <formula>ABS(Apttus_QPConfig__NetAdjustmentPercent__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Adjustment* (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Net_Net_Price__c</fullName>
        <label>Net Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Net_Price_MSPA_or_Direct_Customer__c</fullName>
        <label>Net Price for MSPA or Direct Customer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Net_Price_Override__c</fullName>
        <description>Field to hold the new price value (to override existing price value) for the line item when selected discount type is &quot;Net Price Discount&quot; in line item.</description>
        <label>Net Price Override</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Net_Price__c</fullName>
        <description>this is used somewhere on rollup summery fields so cannot use this field on report</description>
        <formula>APTS_Total_Net_Sales_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Price*</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Net_Sales_Price__c</fullName>
        <label>Net Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Net_Unit_Price__c</fullName>
        <formula>Apttus_QPConfig__NetUnitPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Unit Price*</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_New_Net_price__c</fullName>
        <formula>Apttus_QPConfig__NetPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Net price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_No_Load_Losses__c</fullName>
        <inlineHelpText>kW</inlineHelpText>
        <label>No Load Losses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Non_Order_Related_R_D__c</fullName>
        <label>Non-Order Related R&amp;D</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Oil_Weight__c</fullName>
        <inlineHelpText>KG</inlineHelpText>
        <label>Oil Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Opportunity_Source__c</fullName>
        <label>Opportunity Source</label>
        <picklist>
            <picklistValues>
                <fullName>CCP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offline tool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quotation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ServIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ServISPLAN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Optional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Optional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Order_Handler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Handler</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotation_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Order_Number__c</fullName>
        <label>Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Order_Related_Test_Cost_Inspections__c</fullName>
        <label>Order Related Test Cost and Inspections</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Ordering_System__c</fullName>
        <label>Ordering System</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Original_Incoterms__c</fullName>
        <label>Original Incoterms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Original_Pricing_Date__c</fullName>
        <label>Original Pricing Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Original_Terms_of_Payment__c</fullName>
        <label>Original Terms of Payment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Other_Reason_For_Close__c</fullName>
        <label>Other Reason For Close</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Other_Services_Commissioning__c</fullName>
        <label>Other Services (Commissioning)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_PO_Line_Item__c</fullName>
        <label>PO Line Item</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_P_Avg_Value__c</fullName>
        <label>P-Avg-Value</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_P_High_Percentage__c</fullName>
        <label>P-High (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_P_High_Value__c</fullName>
        <description>For Pricing+ KPI, populated from line item on finalize through code</description>
        <label>P-High-Value</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
   <fields>
        <fullName>APTS_P_Low_Value__c</fullName>
        <description>For Pricing+ KPIs</description>
        <label>P-Low-Value</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_P_Value_NetMargin__c</fullName>
        <description>This field calculates if the P-Value is &quot;Walkaway&quot;,  &quot;Target&quot;, &quot;Start&quot;...</description>
        <formula>IF(
    AND(NOT(ISBLANK(Apttus_QPConfig__NetPrice__c)),
	NOT(ISBLANK(APTS_P_Low_Value__c)),
	NOT(ISBLANK(APTS_P_Avg_Value__c)),
	NOT(ISBLANK(APTS_P_High_Value__c))
	),
	IF(Apttus_QPConfig__NetPrice__c &lt; APTS_P_Low_Value__c,&apos;Below Walk-away&apos;,
	   IF(Apttus_QPConfig__NetPrice__c &lt;= APTS_P_Avg_Value__c,&apos;Between Target &amp; Walk-away&apos;,
	      IF(Apttus_QPConfig__NetPrice__c &lt;= APTS_P_High_Value__c, &apos;Between Start &amp; Target&apos;,&apos;Above Start&apos;)
	      )
	   ),
    &apos;Not Applicable&apos;
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P-Value &amp; NetMargin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Packing__c</fullName>
        <label>Packing</label>
        <picklist>
            <picklistValues>
                <fullName>Standard Packing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W/O Packing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardboard at Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardboard Included</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pallet w/o foil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pallet with foil w/o cartboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pallet, foil, cartboard, conservation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plywood case humidity protected (3H) at cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plywood case humidity protected (3H) included</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wooden case humidity protected (4H) at cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wooden case humidity protected (4H) included</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wooden box (airw./seaw. container)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wooden box (seaworthy conventional)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Partial_Delivery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partial Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Penalty_Max__c</fullName>
        <inlineHelpText>% max</inlineHelpText>
        <label>Penalty Max</label>
        <picklist>
            <picklistValues>
                <fullName>7.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>